--- a/template website.html
+++ b/template website.html
@@ -17,32 +17,23 @@
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color: rgb(205, 90, 128)">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="C:\Users\ACER\Documents\css\WhatsApp Image 2021-06-27 at 17.41.47 (1).jpeg" width="50">
+      <img src="C:\Users\ACER\Documents\TUGAS PEMROGRAMAN\WhatsApp Image 2021-06-27 at 17.41.47 (1).jpeg" width="50">
       RAHMADANI NADIA FITRI</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <a class="nav-link active" aria-current="page" href="#">BERANDA</a>
-        <a class="nav-link" href="#">PROFIL</a>
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">KONTAK</a>
-      <div class="dropdown-menu">
-      <a class="dropdown-item" href="#">email:rahmadaninadia28@gmail.com/a>
-      <a class="dropdown-item" href="#">hp/wa:082280099620</a>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#">Separated link</a>
-    </div>
-  </li>
-         <a class="nav-link tab" href="#" tabindex="-1" aria-tab panel="true">kembali</a>
+        <a class="nav-link active" aria-current="page" href="#BERANDA">BERANDA</a>
+        <a class="nav-link" href="#PROFIL">PROFIL</a>
+         <a class="nav-link tab" href="#KEMBALI" tabindex="-1" aria-tab panel="true">kembali</a>
       </div>
     </div>
   </div>
 </nav>
 <div class="jumbotron jumbotron-fluid">
   <div class="container text-center">
-    <img src="C:\Users\ACER\Documents\css\WhatsApp Image 2020-12-03 at 21.50.09.jpeg" widht="100">
+    <img src="C:\Users\ACER\Documents\TUGAS PEMROGRAMAN\WhatsApp Image 2020-12-03 at 21.50.09.jpeg" widht="100">
     <h1 class="h1">RAHMADANI NADIA FITRI </h1>
     </br> </br></br>
       <p class="h3">PRODI SISTEM INFORMASI</p>
